Complete html baseplate

--- a/index.html
+++ b/index.html
@@ -30,13 +30,58 @@
 <section class="information">
 <h1>Some random information.</h1>
 <div class="information-wrapper">
-    
+<div class="card">
+    <img src="https://images.unsplash.com/photo-1516628319537-4884bab97dc6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=881&q=80" alt="lion">
+    <div class="card-text">
+        <p>this is some subtext under an illustration or image</p>
+    </div>
 </div>
 
+<div class="card">
+    <img src="https://images.unsplash.com/photo-1516628319537-4884bab97dc6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=881&q=80" alt="lion">
+    <div class="card-text">
+        <p>this is some subtext under an illustration or image</p>
+    </div>
+</div>
 
+<div class="card">
+    <img src="https://images.unsplash.com/photo-1516628319537-4884bab97dc6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=881&q=80" alt="lion">
+    <div class="card-text">
+        <p>this is some subtext under an illustration or image</p>
+    </div>
+</div>
+
+<div class="card">
+    <img src="https://images.unsplash.com/photo-1516628319537-4884bab97dc6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=881&q=80" alt="lion">
+    <div class="card-text">
+        <p>this is some subtext under an illustration or image</p>
+    </div>
+</div>
+</div>
 </section>
 
+<section class="quote">
+    <div class="quote-content">
+        <h1>This is an inspiring quore, or a Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos facere, voluptatum quis ipsa assumenda suscipit nihil eum iusto.</h1>
+    </div>
+    <div class="quote-author">
+        <h2>-Elliot, some cool guy probably</h2>
+    </div>
+</section>
 
+<section class="call-action">
+    <div class="call-content">
+        <h3>Call to action! It's time!</h3>
+        <p>Sign up for our product by clicking that button right over there!</p>
+        <button class="call-button">
+            Sign up!
+        </button>
+    </div>
+</section>
+
+<section class="footer">
+    <p>Copyright © github/rizelliot </p>
+</section>
 
 </body>
 </html>
