--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="./libs/bttn.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;700&display=swap" rel="stylesheet"> 
@@ -24,7 +25,7 @@
             <div class="hero-text">
                 <h1>This website is awesome</h1>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus ab perferendis, earum, asperiores quibusdam amet.</p>
-                <button class="hero-button">Sign up!</button>
+                <button class="hero-button bttn-jelly bttn-md bttn-default">Sign up!</button>
             </div>
             <img src="https://images.unsplash.com/photo-1498038116800-4159eb9b2a62?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80" alt="safari picture" class="hero-img">
         </div>
