Update README.md, finish CTA section and footer

--- a/index.html
+++ b/index.html
@@ -76,16 +76,18 @@
 
 <section class="call-action">
     <div class="call-content">
-        <h3>Call to action! It's time!</h3>
-        <p>Sign up for our product by clicking that button right over there!</p>
-        <button class="call-button">
+        <div class="call-text">
+            <h3>Call to action! It's time!</h3>
+            <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <button class="call-button bttn-jelly bttn-md bttn-default">
             Sign up!
         </button>
     </div>
 </section>
 
 <section class="footer">
-    <p>Copyright © github/rizelliot </p>
+    <p>Copyright © github.com/rizelliot </p>
 </section>
 
 </body>
