Redesign, fix UI

--- a/index.html
+++ b/index.html
@@ -12,19 +12,24 @@
     <title>Document</title>
 </head>
 <body>
+
+
+    <img class="background" src="https://images.unsplash.com/photo-1535940360221-641a69c43bac?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1466&q=80" alt="">
+
+
     <nav class="header"> 
         <img src="./images/hawklogo.png" alt="logo">
         <ul>
-            <li><a href="">Link 1</a></li>
-            <li><a href="">Link 2</a></li>
-            <li><a href="">Link 3</a></li>
+            <li><a href="">About us</a></li>
+            <li><a href="">Pricing</a></li>
+            <li><a href="">Pictures</a></li>
         </ul>
     </nav>
     <section class="hero">
         <div class="hero-wrapper">
             <div class="hero-text">
-                <h1>This website is awesome</h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus ab perferendis, earum, asperiores quibusdam amet.</p>
+                <h1>Prepare for the adventure of your life</h1>
+                <p>Does an African safari feature on your bucket list? It should! Africa has so much to offer, from spectacular scenery, friendly people and cultural treasures to blissful beaches. But above all else, it is the wildlife and safari lifestyle that will draw you back, again and again.</p>
                 <button class="hero-button bttn-jelly bttn-md bttn-default">Sign up!</button>
             </div>
             <img src="https://images.unsplash.com/photo-1498038116800-4159eb9b2a62?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80" alt="safari picture" class="hero-img">
@@ -32,33 +37,33 @@
     </section>
     
 <section class="information">
-<h1>Some random information.</h1>
+<h1>Animals you can encounter!</h1>
 <div class="information-wrapper">
 <div class="card">
     <img src="https://images.unsplash.com/photo-1516628319537-4884bab97dc6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=881&q=80" alt="lion">
     <div class="card-text">
-        <p>this is some subtext under an illustration or image</p>
+        <p>Very big cats!</p>
     </div>
 </div>
 
 <div class="card">
-    <img src="https://images.unsplash.com/photo-1516628319537-4884bab97dc6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=881&q=80" alt="lion">
+    <img src="https://images.unsplash.com/photo-1586490915014-b2490ffd4727?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" alt="lion">
     <div class="card-text">
-        <p>this is some subtext under an illustration or image</p>
+        <p>...even more big cats!</p>
     </div>
 </div>
 
 <div class="card">
-    <img src="https://images.unsplash.com/photo-1516628319537-4884bab97dc6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=881&q=80" alt="lion">
+    <img src="https://www.publicdomainpictures.net/pictures/280000/nahled/african-wild-dog-1544541746Jlp.jpg" alt="lion">
     <div class="card-text">
-        <p>this is some subtext under an illustration or image</p>
+        <p>The best boy</p>
     </div>
 </div>
 
 <div class="card">
-    <img src="https://images.unsplash.com/photo-1516628319537-4884bab97dc6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=881&q=80" alt="lion">
+    <img src="https://images.unsplash.com/photo-1620819831265-5eb1dbd9d005?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" alt="antelope">
     <div class="card-text">
-        <p>this is some subtext under an illustration or image</p>
+        <p>Jumpy creatures</p>
     </div>
 </div>
 </div>
@@ -66,9 +71,9 @@
 
 <section class="quote">
     <div class="quote-content">
-        <h1>This is an inspiring quore, or a Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos facere, voluptatum quis ipsa assumenda suscipit nihil eum iusto.</h1>
+        <h1><em>"African wild dogs are pretty cool y'know?"</em></h1>
         <div class="quote-author">
-            <h2>-Elliot, some cool guy probably</h2>
+            <h2>-Elliot, an irl African Wild Dog</h2>
         </div>
     </div>
     
@@ -77,7 +82,7 @@
 <section class="call-action">
     <div class="call-content">
         <div class="call-text">
-            <h3>Call to action! It's time!</h3>
+            <h3>Contact us and book your own trip!</h3>
             <p>Sign up for our product by clicking that button right over there!</p>
         </div>
         <button class="call-button bttn-jelly bttn-md bttn-default">
